# pxt-engine

./: .gitmodules  CMakeLists.txt
Application/src/: application.cpp
Engine/src/: application.cpp  application.hpp  pxtengine.h
Engine/src/core/: constants.hpp  pch.hpp
Engine/src/core/layer/: layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
Engine/src/graphics/: frame_info.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp
Engine/src/graphics/context/: logical_device.cpp  physical_device.hpp
Engine/src/graphics/render_systems/: debug_render_system.cpp  denoiser_render_system.cpp  denoiser_render_system.hpp  density_texture_system.cpp  density_texture_system.hpp  master_render_system.cpp  master_render_system.hpp  material_render_system.cpp  point_light_system.cpp  point_light_system.hpp  raytracing_render_system.cpp  raytracing_render_system.hpp  raytracing_scene_manager_system.cpp  raytracing_scene_manager_system.hpp  render_layer.cpp  render_layer.hpp  shadow_map_render_system.cpp  shadow_map_render_system.hpp  skybox_render_system.cpp  skybox_render_system.hpp  ui_render_layer.cpp  ui_render_layer.hpp  ui_render_system.cpp  ui_render_system.hpp
Engine/src/graphics/resources/: material_registry.cpp  material_registry.hpp  texture2d.cpp  texture2d.hpp  texture_registry.cpp  texture_registry.hpp  vk_buffer.hpp  vk_image.cpp  vk_image.hpp  vk_mesh.cpp  vk_mesh.hpp  vk_shader.cpp
Engine/src/resources/: resource.hpp  resource_manager.cpp
Engine/src/resources/importers/: mesh_importer.cpp  texture_importer.cpp
Engine/src/resources/types/: image.hpp  material.cpp  material.hpp
Engine/src/scene/: camera.cpp  camera.hpp  scene.cpp  scene.hpp  scene_serializer.cpp  scene_serializer.hpp
Engine/src/scene/ecs/: component.hpp  entity.hpp
assets/imgui_config/: imgui.ini
assets/scenes/: buddha.pxtscene  cube_vol.pxtscene  cuboAGardaland.pxtscene  glass_sphere_gold_bunny.pxtscene  lucy.pxtscene  nuv.pxtscene  prima_nuvola(maj=1).pxtscene  shadows.pxtscene  sneakyVase.pxtscene  test.pxtscene  thesis.pxtscene  thx.pxtscene  vol.pxtscene  volsas.pxtscene  volumbuh.pxtscene
assets/shaders/: cube_shadow_map_creation.vert  debug_shader.frag  density_texture.comp  global_majorant.comp
assets/shaders/common/: geometry.glsl  material.glsl  math.glsl  payload.glsl  random.glsl  ray.glsl  volume.glsl
assets/shaders/material/pbr/: bsdf.glsl
assets/shaders/raytracing/: distance.rchit  distance.rmiss  pathtracing.rchit  pathtracing.rgen  pathtracing.rmiss  primary.rchit  primary.rgen  visibility.rchit  visibility.rmiss  vol_pathtracing.rchit  vol_pathtracing.rgen  vol_pathtracing.rmiss
assets/shaders/raytracing/common/: bindings.glsl  nee.glsl  push.glsl  sky.glsl  surface.glsl
assets/shaders/raytracing/denoising/: accumulation.comp  spatial.comp  spatial_gaussian_2d.comp  spatial_gaussian_bilateral.comp  temporal.comp
assets/shaders/ubo/: global_ubo.glsl  shadow_ubo.glsl
